# vibe-editor

./: .gitignore  .mcp.json  .team-state.json  AGENTS.md  CLAUDE.md  LICENSE  README-ja.md  README.md  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: atomic_write.rs  lib.rs  log_prune_tests.rs  main.rs  state.rs  task_supervisor.rs
src-tauri/src/commands/: api_agents.rs  app.rs  asset_scope.rs  atomic_write.rs  authz.rs  dialog.rs  error.rs  files.rs  fs_watch.rs  git.rs  handoffs.rs  logs.rs  mod.rs  project_authority.rs  project_identity.rs  role_profiles.rs  safe_load.rs  schema_version.rs  sessions.rs  settings.rs  settings_mascot.rs  settings_recovery.rs  team_diagnostics.rs  team_history.rs  team_inject.rs  team_presets.rs  team_state.rs  terminal.rs  terminal_tabs.rs  validation.rs  vibe_team_skill.rs  vibe_team_skill_body.md  voice.rs
src-tauri/src/commands/api_agents/: project_docs.rs  providers.rs  skills.rs  tests.rs  tools.rs  tools_exec.rs  tools_search.rs  tools_web.rs  types.rs
src-tauri/src/commands/api_agents/providers/: agentic.rs  context.rs
src-tauri/src/commands/api_agents/providers/agentic/: tests.rs
src-tauri/src/commands/api_agents/skills/: tests.rs
src-tauri/src/commands/app/: team_mcp.rs  updater.rs  window.rs
src-tauri/src/commands/app/team_mcp/: tests.rs
src-tauri/src/commands/authz/: active_project.rs
src-tauri/src/commands/files/: encoding.rs  hash.rs  image_preview.rs  path_safety.rs  root_gate.rs
src-tauri/src/commands/project_authority/: tests.rs
src-tauri/src/commands/team_history/: list.rs  mutate.rs
src-tauri/src/commands/terminal/: blocking_spawn.rs  codex_instructions.rs  codex_prompt.rs  command_validation.rs  create_types.rs  paste_image.rs  prompt_files.rs  shell_policy.rs  shell_policy_tests.rs
src-tauri/src/commands/tests/: git.rs  mod.rs  sessions.rs  sessions_authz.rs  settings.rs  spawn_cwd_authz.rs  team_history_authz.rs
src-tauri/src/commands/vibe_team_skill/: secure_install.rs  secure_install_tests.rs  tests.rs
src-tauri/src/mcp_config/: claude.rs  codex.rs  mod.rs
src-tauri/src/pty/: batcher.rs  claude_watcher.rs  codex_app_server.rs  codex_broker.rs  codex_watcher.rs  inflight.rs  mod.rs  path_norm.rs  registry.rs  scrollback.rs  session.rs  win_job_object.rs
src-tauri/src/pty/registry/: lifecycle.rs
src-tauri/src/pty/session/: env_allowlist.rs  exit_info.rs  exit_watcher.rs  handle.rs  injecting_guard.rs  lock.rs  mod.rs  registration.rs  spawn.rs  spawn_metrics.rs  termination.rs  unix_path.rs  windows_resolve.rs
src-tauri/src/pty/tests/: batcher.rs  mod.rs  session_env.rs  session_spawn.rs  session_windows.rs  session_windows_bash.rs
src-tauri/src/team_hub/: bridge.rs  codex_delivery.rs  deliver.rs  delivery_mode.rs  error.rs  events.rs  file_locks.rs  inbox_watch.rs  inject.rs  mod.rs  protocol.rs  role_lint.rs  spool.rs  state.rs  task_status.rs
src-tauri/src/team_hub/app_server/: client.rs  error.rs  mod.rs  protocol.rs  tests.rs  wire.rs
src-tauri/src/team_hub/protocol/: consts.rs  dynamic_role.rs  helpers.rs  instruction_lint.rs  mod.rs  permissions.rs  role_template.rs  schema.rs
src-tauri/src/team_hub/protocol/tools/: ack_handoff.rs  assign_task.rs  create_leader.rs  diagnostics.rs  dismiss.rs  error.rs  file_lock.rs  get_tasks.rs  info.rs  list_role_profiles.rs  mod.rs  read.rs  recruit.rs  report.rs  send.rs  status.rs  switch_leader.rs  update_task.rs
src-tauri/src/team_hub/state/: file_locks_glue.rs  hub_state.rs  member_diagnostics.rs  message_log.rs  mod.rs  persistence.rs  recruit.rs
src-tauri/src/team_hub/state/persistence/: tests.rs
src-tauri/src/team_hub/tests/: mod.rs  permissions.rs
src-tauri/src/util/: app_log.rs  backup.rs  config_paths.rs  log_redact.rs  mod.rs
src-tauri/windows/: common-controls-v6.manifest
(+572 files in other folders)
